Fix image stretching on mobile

--- a/styles/main.css
+++ b/styles/main.css
@@ -194,8 +194,7 @@ a {
 .blog-image1 {
   box-shadow: 5px 5px var(--pink);
   border: 1px solid var(--black);
-  max-height: 100%;
-  object-fit: cover;
+  height: auto;
 }
 /*media queries for blog page - if screen is 1050px or bigger line p1 and image1 up next to each other*/
 @media (min-width: 1050px) {
